Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignTextObjUndefinedField.quorum
class Main
    Text txt
    action Main
        txt = cast(Text, undefined)
        if txt = undefined
            output "passed"
        end
    end
end