Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBooleanUndefinedField.quorum
class Main
    boolean bool
    action Main
        bool = cast(boolean, undefined)
    end
end